Refactor rápido para validación

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
@@ -31,7 +31,7 @@
             @*@Html.DisplayNameFor(model => model.First().TieneObservacion)*@
         </th>
         <th>
-            Vista Previa
+            @Html.Label("Ver")
         </th>
     </tr>
 
