--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -148,6 +148,7 @@
                                                                 var aDesviacion = aData[4];
 
                                                                 var tamanio = 0;
+                                                                var texto = "";
 
                                                                 for (var data in aDatasets1) {
                                                                     var valor = parseInt(aDatasets1[data]);
@@ -155,19 +156,23 @@
                                                                 }
 
                                                                 //for (var i = 0; i < tamanio; i++)
-                                                                document.getElementById("graf_@item_actual").innerHTML = document.getElementById("graf_@item_actual").innerText + "Cantidad de Estudiantes que respondieron: " + (tamanio).toString() + " ";
+                                                                //document.getElementById("graf_@item_actual").innerHTML = document.getElementById("graf_@item_actual").innerText + "Cantidad de Estudiantes que respondieron: " + (tamanio).toString() + " ";
+                                                                texto = texto + "Cantidad de Estudiantes que respondieron: " + (tamanio).toString() + "<br>";
 
                                                                 if ('@seccion.Item.TipoPregunta' == 5 || '@seccion.Item.TipoPregunta' == 6)
                                                                 {
                                                                     //Promedio
-                                                                    document.getElementById("graf_@item_actual").innerHTML = document.getElementById("graf_@item_actual").innerText + "Promedio: " + (aPromedio).toString() + " ";
+                                                                    //document.getElementById("graf_@item_actual").innerHTML = document.getElementById("graf_@item_actual").innerText + "Promedio: " + (aPromedio).toString() + " ";
+                                                                    texto = texto + "Promedio: " + (aPromedio).toString() + "<br>";
                                                                     //Mediana
-                                                                    document.getElementById("graf_@item_actual").innerHTML = document.getElementById("graf_@item_actual").innerText + "Mediana: " + (aMediana).toString() + " ";
+                                                                    //document.getElementById("graf_@item_actual").innerHTML = document.getElementById("graf_@item_actual").innerText + "Mediana: " + (aMediana).toString() + " ";
+                                                                    texto = texto + "Mediana: " + (aMediana).toString() + "<br>";
                                                                     //Desviacion Estandar
-                                                                    document.getElementById("graf_@item_actual").innerHTML = document.getElementById("graf_@item_actual").innerText + "Desviacion estandar: " + (aDesviacion).toString() + " ";
+                                                                    //document.getElementById("graf_@item_actual").innerHTML = document.getElementById("graf_@item_actual").innerText + "Desviacion estandar: " + (aDesviacion).toString() + " ";
+                                                                    texto = texto + "Desviacion estandar: " + (aDesviacion).toString() + "<br>";
                                                                 }
                                                               
-                                                            
+                                                                document.getElementById("graf_@item_actual").innerHTML = texto;
 
                                                                 @*var iter = aLabels;
                                                                 <p>@seccion.Item.ItemId</p>*@
@@ -239,8 +244,6 @@
                                                     }
                                                     <br />
                                                     <div class="panel-group" id="accordion3_@seccion_counter">
-
-
 
                                                         @if (seccion.Item.TieneObservacion == observation)
                                                         {
