Arreglados dos errores: el rollback de crear perfil y el permiso de asignar formulario.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/SeleccionPermisos/SeleccionarPermisos.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/SeleccionPermisos/SeleccionarPermisos.cshtml
@@ -80,7 +80,7 @@
         <button class="btn btn-default" type="submit">Guardar</button>
 
         <!-- El boton cancelar refresca la pantalla -->
-        <button class="btn btn-default" onclick="location.href='@Url.Action("SeleccionarPermisos", "SeleccionPermisos")'; return false;"> Cancelar</button>
+        <button class="btn btn-default" onclick="location.href='@Url.Action("Index", "Home")'; return false;"> Cancelar</button>
     </p>
 
     <br />
