--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -115,7 +115,7 @@
                                     <li class="disabled"><a id="link_deshabilitado">Insertar formulario</a></li>
                                 }
 
-                                if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.ASIGNAR_FORMUALRIO))
+                                if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.ASIGNAR_FORMULARIO))
                                 {
                                     <li>@Html.ActionLink("Asignar formulario", "Index", "AsignarFormularios")</li>
                                 }
