--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -223,9 +223,7 @@
                                                     }
                                                     else
                                                     {
-                                                        <div style="height:180px; overflow-y: scroll;">
-
-                                                            <p id="rep_@item_actual" style="float:left"></p>
+                                                        <div id="rep_@item_actual" style="height:180px; overflow-y: scroll;">
 
                                                             @foreach (var item in Model.Formulario_Respuesta.Take(1))
                                                             {
@@ -239,10 +237,11 @@
                                                                     success: function (chData) {
                                                                     var aData = chData;
                                                                     var obs = aData[0];
-
+                                                                        var texto = "";
                                                                         for (var data in obs) {
-                                                                            document.getElementById("rep_@item_actual").innerHTML = document.getElementById("rep_@item_actual").innerText + (obs[data]).toString();
+                                                                            texto = texto + (obs[data]).toString() + "<hr>";
                                                                         }
+                                                                        document.getElementById("rep_@item_actual").innerHTML = texto;
                                                                     }
                                                                 });
                                                             </script>
