--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
@@ -85,10 +85,11 @@
                                         </tr>
                                         for (int i = 0; i < Model.Perfil.Count; i++)
                                         {
-                                            <tr>
-                                                <td>@Model.Perfil.ElementAt(i)</td>
-                                                <td>@Html.CheckBoxFor(model => Model.perfilesAsignados.ElementAt(i).asignar, new { @checked = "checked", @id = i }) <br></td>
-                                            </tr>
+                                        <tr>
+                                            <td>@Model.Perfil.ElementAt(i)</td>
+                                            <td>@Html.CheckBoxFor(model => Model.tienePerfil.ElementAt(i), new { @checked = "checked", @id = i }) <br></td>
+                                            @Html.HiddenFor(model => Model.Perfil.ElementAt(i))
+                                        </tr>
                                         }
                                     }
                                 }
