Solucionados los errores luego de los cambios en el servidor.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/VerPersonas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/VerPersonas.cshtml
@@ -28,7 +28,10 @@
             Cédula
         </th>
         <th>
-            Nombre
+            Primer nombre
+        </th>
+        <th>
+            Segundo nombre
         </th>
         <th>
 
@@ -42,10 +45,6 @@
 
             Correo Institucional
         </th>
-        <th>
-
-            Dirección
-        </th>
         <th></th>
     </tr>
 
@@ -56,7 +55,10 @@
                 @item.persona.Cedula
             </td>
             <td>
-                @item.persona.Nombre
+                @item.persona.Nombre1
+            </td>
+            <td>
+                @item.persona.Nombre2
             </td>
             <td>
                 @item.persona.Apellido1
@@ -66,9 +68,6 @@
             </td>
             <td>
                 @item.usuario.CorreoInstitucional
-            </td>
-            <td>
-                @item.persona.Direccion
             </td>
             <td>
                 @Html.ActionLink("Editar", "Editar", new { id = item.persona.Cedula }, new { @class = "btn btn-default" })
