--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/CrearUsuario.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/CrearUsuario.cshtml
@@ -31,10 +31,10 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.persona.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.persona.Nombre1, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-3">
-                    @Html.EditorFor(model => model.persona.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.persona.Nombre, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.persona.Nombre1, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.persona.Nombre1, "", new { @class = "text-danger" })
                 </div>
             </div>
 
@@ -61,14 +61,6 @@
                 <div class="col-md-3">
                     @Html.EditorFor(model => model.usuario.CorreoInstitucional, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.usuario.CorreoInstitucional, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.persona.Direccion, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-3">
-                    @Html.EditorFor(model => model.persona.Direccion, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.persona.Direccion, "", new { @class = "text-danger" })
                 </div>
             </div>
 
