Validaciones de longitud de entrada en archivo

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/VerPersonas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/VerPersonas.cshtml
@@ -42,10 +42,10 @@
 
             Correo Institucional
         </th>
-        <th>
+        @*<th>
 
             Dirección
-        </th>
+        </th>*@
         <th></th>
     </tr>
 
@@ -56,7 +56,7 @@
                 @item.persona.Cedula
             </td>
             <td>
-                @item.persona.Nombre
+                @item.persona.Nombre1
             </td>
             <td>
                 @item.persona.Apellido1
@@ -67,9 +67,9 @@
             <td>
                 @item.usuario.CorreoInstitucional
             </td>
-            <td>
+            @*<td>
                 @item.persona.Direccion
-            </td>
+            </td>*@
             <td>
                 @Html.ActionLink("Editar", "Editar", new { id = item.persona.Cedula }, new { @class = "btn btn-default" })
          
