--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Administrador/CargarUsuarios.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Administrador/CargarUsuarios.cshtml
@@ -26,30 +26,46 @@
         <span style="color: green">@ViewBag.Message</span>
     }
 
-<table class="table">
-    <thead>
-    <tr>
-        @foreach (DataColumn columna in Model.Columns)
-        {
-            <th>@columna.ColumnName</th>
-        }
-    </tr>
-    </thead>
+@if (Model != null)
+{
+    <table class="table">
+        <thead>
+        <tr>
+            <th>Error</th>
+            <th>Fila</th>
+            <th>Cedula</th>
+            <th>Perfil</th>
+            <th>Carne</th>
+            <th>Primer nombre</th>
+            <th>Segundo nombre</th>
+            <th>Primer Apellido</th>
+            <th>Segundo Apellido</th>
+            <th>Correo</th>
+            <th>Sigla Carrera</th>
+            <th>Énfasis</th>
+        </tr>
+        </thead>
     
-    <tbody>
-    @foreach (DataRow fila in Model.Rows)
-    {
+        <tbody>
+    
+    
+        @foreach (DataRow fila in Model.Rows)
+        {
         <tr>
             @foreach (DataColumn columna in Model.Columns)
             {
                 <td>@fila[columna.ColumnName]</td>
             }
         </tr>
-        
-    }
-    </tbody>
+
+        }
     
-</table>
+   
+        </tbody>
+    
+    </table>
+}
+
 
 </body>
 </html>
