--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -93,11 +93,11 @@
 
                                 if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.INSERTAR_USUARIO))
                                 {
-                                    <li>@Html.ActionLink("Cargar Archivo", "CargarArchivo", "Administrador")</li>
+                                    <li>@Html.ActionLink("Cargar Usuarios", "CargarUsuarios", "Administrador")</li>
                                 }
                                 else
                                 {                                    
-                                    <li>@Html.ActionLink("Cargar Archivo", "CargarArchivo", "Administrador")</li>
+                                    <li>@Html.ActionLink("Cargar Usuarios", "CargarUsuarios", "Administrador")</li>
                                     <!-- <li class="disabled"><a>Cargar Archivo</a></li> -->
                                 }
                             }
