Actualizado el modelo y un pequeño arreglo en Details de VisualizarFormulario.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -39,7 +39,7 @@
 
                 <span style="float:right;">
                     <b>Profesor:</b>
-                    @Html.DisplayFor(modelItem => title.Profesor.Persona.Nombre)
+                    @Html.DisplayFor(modelItem => title.Profesor.Persona.Nombre1)
                     @Html.DisplayFor(modelItem => title.Profesor.Persona.Apellido1)
                     @Html.DisplayFor(modelItem => title.Profesor.Persona.Apellido2)
                 </span>
