--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Crear.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Crear.cshtml
@@ -30,7 +30,8 @@
         <div class="form-group">
             @Html.Label("Descripción", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Descripcion, new { @class = "form-control", @rows = "3", @style="overflow:auto;resize:none"})
+
                 @Html.ValidationMessageFor(model => model.Descripcion, null, new { @class = "text-danger" })
             </div>
         </div>
