--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/AsignacionFormularioGrupo.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/AsignacionFormularioGrupo.cshtml
@@ -33,7 +33,7 @@
                         @foreach (var profe in gr.Profesores)
                         {
 
-                            @Html.DisplayFor(ModelItem => profe.Persona.Nombre) <span> </span>
+                            @Html.DisplayFor(ModelItem => profe.Persona.Nombre1) <span> </span>
                             @Html.DisplayFor(ModelItem => profe.Persona.Apellido1) <span> </span>
                             @Html.DisplayFor(ModelItem => profe.Persona.Apellido2) <br>
                         }
