--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/EditorTemplates/ElegirGrupoEditorViewModel.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/EditorTemplates/ElegirGrupoEditorViewModel.cshtml
@@ -24,7 +24,7 @@
     <td align='left'>
        @foreach (var profe in Model.Profesores)
         {
-            @Html.DisplayFor(model => profe.Persona.Nombre) <span> </span>
+            @Html.DisplayFor(model => profe.Persona.Nombre1) <span> </span>
             @Html.DisplayFor(model => profe.Persona.Apellido1) <span> </span>
             @Html.DisplayFor(model => profe.Persona.Apellido2) <br>
         }
